examples/test_package/Double_dc_only_report_tool/steps/benchprove_rough_run2/#test_results_result.txt
Error evaluating Problog model:
    return [
           ^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/langda/utils/test_tools.py", line 22, in timeout_handler
    raise TimeoutError(f"Function timed out while processing file: {file_basename}")
TimeoutError: Function timed out while processing file: benchprove_rough_run2Error evaluating Problog model:
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_builtin.py", line 257, in _builtin_clause
    clause_ids = database.get_node(clause_def).children
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'tuple' object has no attribute 'children'Error evaluating Problog model:
    queue += self.notifyResultMe(result, node)
    ^^^^^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/langda/utils/test_tools.py", line 22, in timeout_handler
    raise TimeoutError(f"Function timed out while processing file: {file_basename}")
TimeoutError: Function timed out while processing file: benchprove_rough_run2Error evaluating Problog model:
    return [
           ^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/langda/utils/test_tools.py", line 22, in timeout_handler
    raise TimeoutError(f"Function timed out while processing file: {file_basename}")
TimeoutError: Function timed out while processing file: benchprove_rough_run2% Problog Inference Result：
prove(implies(parent(alice,bob),ancestor(alice,bob))) = 0.0000
prove(opposite(parent(carol,alice))) = 0.0000
prove(expand(double(3),6)) = 0.0000
prove(includes([a, b, c],b)) = 0.0000
prove(extend([1, 2],3,[3, 1, 2])) = 0.0000Error evaluating Problog model:
    l2 = deque([other])
         ^^^^^^^^^^^^^^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/langda/utils/test_tools.py", line 22, in timeout_handler
    raise TimeoutError(f"Function timed out while processing file: {file_basename}")
TimeoutError: Function timed out while processing file: benchprove_rough_run2% Problog Inference Result：
prove(implies(parent(alice,bob),ancestor(alice,bob))) = 1.0000
prove(opposite(parent(carol,alice))) = 0.0000
prove(expand(double(3),6)) = 0.0000
prove(includes([a, b, c],b)) = 0.0000
prove(extend([1, 2],3,[3, 1, 2])) = 0.0000% Problog Inference Result：
prove(implies(parent(alice,bob),ancestor(alice,bob))) = 0.0000
prove(opposite(parent(carol,alice))) = 0.0000
prove(expand(double(3),6)) = 0.0000
prove(includes([a, b, c],b)) = 0.0000
prove(extend([1, 2],3,[3, 1, 2])) = 0.0000Error evaluating Problog model:
    def __eq__(self, other):
    
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/langda/utils/test_tools.py", line 22, in timeout_handler
    raise TimeoutError(f"Function timed out while processing file: {file_basename}")
TimeoutError: Function timed out while processing file: benchprove_rough_run2% Problog Inference Result：
prove(implies(parent(alice,bob),ancestor(alice,bob))) = 1.0000
prove(opposite(parent(carol,alice))) = 0.0000
prove(expand(double(3),6)) = 0.0000
prove(includes([a, b, c],b)) = 0.0000
prove(extend([1, 2],3,[3, 1, 2])) = 0.0000% Problog Inference Result：
prove(implies(parent(alice,bob),ancestor(alice,bob))) = 0.0000
prove(opposite(parent(carol,alice))) = 0.0000
prove(expand(double(3),6)) = 0.0000
prove(includes([a, b, c],b)) = 0.0000
prove(extend([1, 2],3,[3, 1, 2])) = 0.0000% Problog Inference Result：
prove(implies(parent(alice,bob),ancestor(alice,bob))) = 1.0000
prove(opposite(parent(carol,alice))) = 0.0000
prove(expand(double(3),6)) = 0.0000
prove(includes([a, b, c],b)) = 0.0000
prove(extend([1, 2],3,[3, 1, 2])) = 0.0000